--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 APP_NAME=STMS
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PgwgkYmoWSW7I16I/kfxnxqZj3cDDTUcpAdT9BMNm3c=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=stms
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -25,11 +25,11 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=null
+MAIL_PORT=465
+MAIL_USERNAME=97e05a14b0dcc4
+MAIL_PASSWORD=8df14d99d7cceb
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=admin@stms.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
