--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=STMS
 APP_ENV=local
 APP_KEY=base64:PgwgkYmoWSW7I16I/kfxnxqZj3cDDTUcpAdT9BMNm3c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
